✨ api features
