# zoo/models/base.py
@@ -3,13 +3,76 @@ Base Inheritance Models
 """
 
 import datetime
-from typing import Optional
+from typing import Any, ClassVar, Dict, Optional, TypeVar
 
 from sqlalchemy import Column, DateTime
 from sqlmodel import Field, SQLModel, func
 
 
-class OptionalIdMixin(SQLModel):
+class ZooModel(SQLModel):
+    """
+    Base model for all zoo models
+    """
+
+    __example__: ClassVar[Dict[str, Any]] = {}
+
+    __openapi_db_fields__: ClassVar[Dict[str, Any]] = {
+        "id": 1,
+        "created_at": "2021-01-01T00:00:00.000000",
+        "modified_at": "2021-01-02T09:12:34.567890",
+        "deleted_at": None,
+    }
+
+    @classmethod
+    def get_openapi_read_example(cls) -> Dict[str, Any]:
+        """
+        Get the openapi read example
+        """
+        if not cls.__example__:
+            error_msg = "Example not implemented"
+            raise NotImplementedError(error_msg)
+        return {
+            "examples": [
+                {
+                    **cls.__example__,
+                    **cls.__openapi_db_fields__,
+                }
+            ]
+        }
+
+    @classmethod
+    def get_openapi_create_example(cls) -> Dict[str, Any]:
+        """
+        Get the openapi create example
+        """
+        if not cls.__example__:
+            error_msg = "Example not implemented"
+            raise NotImplementedError(error_msg)
+        return {"examples": [cls.__example__]}
+
+    @classmethod
+    def get_openapi_update_example(cls) -> Dict[str, Any]:
+        """
+        Get the openapi update example
+        """
+        if not cls.__example__:
+            error_msg = "Example not implemented"
+            raise NotImplementedError(error_msg)
+        half_example_keys = list(cls.__example__.keys())[: len(cls.__example__) // 2]
+        half_example = {key: cls.__example__[key] for key in half_example_keys}
+        return {"examples": [half_example]}
+
+    @classmethod
+    def get_openapi_delete_example(cls) -> Dict[str, Any]:
+        """
+        Get the openapi delete example
+        """
+        read_example = cls.get_openapi_read_example()
+        read_example["deleted_at"] = "2021-01-02T09:12:34.567890"
+        return read_example
+
+
+class OptionalIdMixin(ZooModel):
     """
     Id mixin, id is optional
 
@@ -21,15 +84,17 @@ class OptionalIdMixin(SQLModel):
     )
 
 
-class RequiredIdMixin(SQLModel):
+class RequiredIdMixin(ZooModel):
     """
     Id mixin with required id
     """
 
-    id: int = Field(primary_key=True, description="The unique identifier for the table")  # noqa: A003
+    id: int = Field(  # noqa: A003
+        primary_key=True, description="The unique identifier for the table"
+    )
 
 
-class CreatedModifiedMixin(SQLModel):
+class CreatedModifiedMixin(ZooModel):
     """
     Created and modified mixin
     """
@@ -45,12 +110,14 @@ class CreatedModifiedMixin(SQLModel):
         nullable=False,
         description="The date and time the record was last modified",
         sa_column=Column(
-            DateTime(timezone=True), server_default=func.CURRENT_TIMESTAMP(), onupdate=func.CURRENT_TIMESTAMP()
+            DateTime(timezone=True),
+            server_default=func.CURRENT_TIMESTAMP(),
+            onupdate=func.CURRENT_TIMESTAMP(),
         ),
     )
 
 
-class DeletedMixin(SQLModel):
+class DeletedMixin(ZooModel):
     """
     Deleted mixin
     """
@@ -61,3 +128,7 @@ class DeletedMixin(SQLModel):
         description="The date and time the record was deleted",
         sa_column=Column(DateTime(timezone=True), default=None, nullable=True),
     )
+
+
+ZooModelType = TypeVar("ZooModelType", bound=ZooModel)
+HasDeletedField = TypeVar("HasDeletedField", bound=DeletedMixin)
